Added custom style.css

--- a/changelogs/templates/changelogs/index.html
+++ b/changelogs/templates/changelogs/index.html
@@ -1,5 +1,9 @@
 {% extends 'changelogs/base.html' %}
 
 {% block content %}
-    <h1>Changelogger</h1>
+    <div class="jumbotron">
+        <h1 class="display-4">Changelogger</h1>
+        <hr class="my-4">
+        <p class="lead">Collector for you changelogs</p>
+    </div>
 {% endblock %}
