--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,11 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'changelogs/style.css' %}">
+    <title>Changelogger</title>
 </head>
 <body>
 
-<main role="main" class="container">
+<main class="container">
     {% block content %}
     {% endblock %}
 </main><!-- /.container -->
