--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -32,6 +32,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'changelogs:all_projects' %}">All projects</a>
+                    <a class="dropdown-item" href="{% url 'changelogs:my_projects' %}">My projects</a>
                 </div>
             </li>
         </ul>
