Added is_public property of project

--- a/changelogs/templates/changelogs/index.html
+++ b/changelogs/templates/changelogs/index.html
@@ -4,6 +4,6 @@
     <div class="jumbotron">
         <h1 class="display-4">Changelogger</h1>
         <hr class="my-4">
-        <p class="lead">Collector for your changelogs</p>
+        <p class="lead">Collector for changelogs</p>
     </div>
 {% endblock %}
