Small design changes

--- a/changelogs/templates/changelogs/my_projects.html
+++ b/changelogs/templates/changelogs/my_projects.html
@@ -22,6 +22,8 @@
             </tbody>
         </table>
     {% else %}
-        <p>No projects are available.</p>
+        <div class="alert alert-info" role="alert">
+            No projects are available =(
+        </div>
     {% endif %}
 {% endblock %}
