--- a/changelogs/templates/changelogs/feed.html
+++ b/changelogs/templates/changelogs/feed.html
@@ -1,16 +1,20 @@
 {% extends 'changelogs/base.html' %}
 
 {% block content %}
-    <h1>Feed</h1>
-
-    {% for version in versions %}
-        <div class="my-4">
-            <h2>
-                <a href="{% url 'changelogs:project_detail' version.project.id %}">{{ version.project.title }}</a> (<a
-                    href="{% url 'changelogs:version_detail' version.project.id version.id %}">{{ version.title }}</a>)
-            </h2>
-            {% include "changelogs/_version.html" with version=version %}
+    {% if versions %}
+        <h1>Feed</h1>
+        {% for version in versions %}
+            <div class="my-4">
+                <h2>
+                    <a href="{% url 'changelogs:project_detail' version.project.id %}">{{ version.project.title }}</a> (<a
+                        href="{% url 'changelogs:version_detail' version.project.id version.id %}">{{ version.title }}</a>)
+                </h2>
+                {% include "changelogs/_version.html" with version=version %}
+            </div>
+        {% endfor %}
+    {% else %}
+        <div class="alert alert-info" role="alert">
+            Empty feed =(
         </div>
-    {% endfor %}
-
+    {% endif %}
 {% endblock %}
