Reworked projects page

--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -28,15 +28,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'changelogs:feed' %}">Feed</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Projects
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'changelogs:all_projects' %}">All projects</a>
-                    <a class="dropdown-item" href="{% url 'changelogs:my_projects' %}">My projects</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'changelogs:projects' %}">Projects</a>
             </li>
         </ul>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
