Added external links to projects

--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -13,6 +13,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="{% static 'changelogs/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'changelogs/fontawesome/css/all.css' %}">
     <title>Changelogger</title>
 </head>
 <body>
