--- a/changelogs/templates/changelogs/project_detail.html
+++ b/changelogs/templates/changelogs/project_detail.html
@@ -4,7 +4,8 @@
 {% block content %}
     <h1>{{ project.title }}</h1>
 
-    <span>URL: {{ project.url }}</span>
+    <span>URL: <a href="{{ project.url }}" target="_blank">{{ project.url }}</a> <i
+            class="fas fa-external-link-alt"></i></span>
 
     <div class="my-4">
         <ul>
