Changed style of h1 headers

--- a/changelogs/templates/changelogs/feed.html
+++ b/changelogs/templates/changelogs/feed.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if versions %}
-        <h1>Feed</h1>
+        <h1 class="display-4">Feed</h1>
         {% for version in versions %}
             <div class="my-4">
                 <h2>
