--- a/changelogs/templates/changelogs/project_detail.html
+++ b/changelogs/templates/changelogs/project_detail.html
@@ -2,7 +2,7 @@
 {% load markdown_extras %}
 
 {% block content %}
-    <h1>{{ project.title }}</h1>
+    <h1 class="display-4">{{ project.title }}</h1>
 
     <span>URL: <a href="{{ project.url }}" target="_blank">{{ project.url }}</a> <i
             class="fas fa-external-link-alt"></i></span>
