Small changes of version template

--- a/changelogs/templates/changelogs/_version.html
+++ b/changelogs/templates/changelogs/_version.html
@@ -1,3 +1,6 @@
 {% load markdown_extras %}
+
 <p class="text-secondary"><small>{{ version.date_time }}</small></p>
-<p>{{ version.body | markdown | safe }}</p>
+<article>
+    {{ version.body | markdown | safe }}
+</article>
