--- a/changelogs/templates/changelogs/project_detail.html
+++ b/changelogs/templates/changelogs/project_detail.html
@@ -2,10 +2,22 @@
 {% load markdown_extras %}
 
 {% block content %}
-    <h1 class="display-4">{{ project.title }}</h1>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="display-4">{{ project.title }}</h1>
+        {% if user.is_authenticated %}
+            <div class="btn-toolbar mb-2 mb-md-0">
+                <div class="btn-group mr-2">
+                    <a class="btn btn-primary" href="{% url 'changelogs:add_version' project.id %}" role="button">
+                        Add version
+                    </a>
+                </div>
+            </div>
+        {% endif %}
+    </div>
 
-    <span>URL: <a href="{{ project.url }}" target="_blank">{{ project.url }}</a> <i
-            class="fas fa-external-link-alt"></i></span>
+    <p>
+        URL: <a href="{{ project.url }}" target="_blank">{{ project.url }}</a> <i class="fas fa-external-link-alt"></i>
+    </p>
 
     <div class="my-4">
         <ul>
