--- a/changelogs/templates/changelogs/feed.html
+++ b/changelogs/templates/changelogs/feed.html
@@ -2,10 +2,9 @@
 
 {% block content %}
     {% if versions %}
-        <h1 class="display-4">Feed</h1>
         {% for version in versions %}
             <div class="my-4">
-                <h2>
+                <h2 class="display-4">
                     <a href="{% url 'changelogs:project_detail' version.project.id %}">{{ version.project.title }}</a> (<a
                         href="{% url 'changelogs:version_detail' version.project.id version.id %}">{{ version.title }}</a>)
                 </h2>
