--- a/changelogs/templates/changelogs/profile.html
+++ b/changelogs/templates/changelogs/profile.html
@@ -1,7 +1,7 @@
 {% extends 'changelogs/base.html' %}
 
 {% block content %}
-    <h1 class="display-2">Cabinet</h1>
+    <h1 class="display-4">Profile</h1>
     <ul>
         <li>username: {{ user.username }}</li>
         <li>e-mail: {{ user.email }}</li>
