--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -89,7 +89,7 @@
             <div class="col-6 col-md">
                 <h5>Resources</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="/api/">API Documentation</a></li>
+                    <li><a class="text-muted" href="{% url 'changelogs:api_documentation' %}">API Documentation</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
