--- a/changelogs/templates/changelogs/base.html
+++ b/changelogs/templates/changelogs/base.html
@@ -19,7 +19,6 @@
         </script>
     {% endif %}
 
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -33,78 +32,16 @@
     <title>Changelogger</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" href="{% url 'changelogs:index' %}">Changelogger</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'changelogs:feed' %}">Feed</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'changelogs:projects' %}">Projects</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            {% if user.is_authenticated %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{ user.username }}
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url 'changelogs:profile' %}">Profile</a>
-                        <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
-                    </div>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
+{% include "changelogs/_navbar.html" %}
 
 <main class="container">
     {% block content %}
     {% endblock %}
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-        <div class="row">
-            <div class="col-12 col-md">
-                <a href="mailto:zhelyabuzhsky@icloud.com">Ilya Zhelyabuzhsky</a>
-                <small class="d-block mb-3 text-muted">© 2019-2020</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Pages</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="{% url 'changelogs:feed' %}">Feed</a></li>
-                    <li><a class="text-muted" href="{% url 'changelogs:projects' %}">Projects list</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Resources</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="{% url 'changelogs:api_documentation' %}">API Documentation</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Product</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="{% url 'changelogs:about' %}">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-</main><!-- /.container -->
+    {% include "changelogs/_footer.html" %}
+</main>
 
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
