--- a/changelogs/templates/changelogs/_base.html
+++ b/changelogs/templates/changelogs/_base.html
@@ -35,7 +35,7 @@
 
 {% include "changelogs/_navbar.html" %}
 
-<main class="container">
+<main role="main">
     {% block content %}
     {% endblock %}
     {% include "changelogs/_footer.html" %}
