--- a/changelogs/templates/changelogs/_footer.html
+++ b/changelogs/templates/changelogs/_footer.html
@@ -1,4 +1,4 @@
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
+<footer class="container pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
         <div class="col-12 col-md">
             <a href="https://zhelyabuzhsky.com">Ilya Zhelyabuzhsky</a>
