--- a/changelogs/templates/changelogs/index.html
+++ b/changelogs/templates/changelogs/index.html
@@ -1,9 +1,10 @@
-{% extends 'changelogs/base.html' %}
+{% extends 'changelogs/_base.html' %}
 
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-4">Changelogger</h1>
-        <hr class="my-4">
-        <p class="lead">Collector for changelogs</p>
+        <div class="container">
+            <h1 class="display-3">Changelogger</h1>
+            <p class="lead">Collector for changelogs</p>
+        </div>
     </div>
 {% endblock %}
