--- a/changelogs/templates/changelogs/profile.html
+++ b/changelogs/templates/changelogs/profile.html
@@ -1,9 +1,11 @@
-{% extends 'changelogs/base.html' %}
+{% extends 'changelogs/_base.html' %}
 
 {% block content %}
-    <h1 class="display-4">Profile</h1>
-    <ul>
-        <li>username: {{ user.username }}</li>
-        <li>e-mail: {{ user.email }}</li>
-    </ul>
+    <div class="container">
+        <h1 class="display-4">Profile</h1>
+        <ul>
+            <li>username: {{ user.username }}</li>
+            <li>e-mail: {{ user.email }}</li>
+        </ul>
+    </div>
 {% endblock %}
