--- a/changelogs/templates/changelogs/about.html
+++ b/changelogs/templates/changelogs/about.html
@@ -1,9 +1,12 @@
 {% extends 'changelogs/base.html' %}
 
 {% block content %}
-    <h1 class="display-4">About</h1>
-    <p>
-        Changelogger is a service to store all your changelogs in one place and to subscribe to changes of your favorite
-        software.
-    </p>
+    <div class="container">
+        <h1 class="display-4">About</h1>
+        <p>
+            Changelogger is a service to store all your changelogs in one place and to subscribe to changes of your
+            favorite
+            software.
+        </p>
+    </div>
 {% endblock %}
