--- a/changelogs/templates/changelogs/version_detail.html
+++ b/changelogs/templates/changelogs/version_detail.html
@@ -1,6 +1,8 @@
-{% extends 'changelogs/base.html' %}
+{% extends 'changelogs/_base.html' %}
 
 {% block content %}
-    <h1 class="display-4">{{ version.project.title }}-{{ version.title }}</h1>
-    {% include "changelogs/_version.html" with version=version %}
+    <div class="container">
+        <h1 class="display-4">{{ version.project.title }}-{{ version.title }}</h1>
+        {% include "changelogs/_version.html" with version=version %}
+    </div>
 {% endblock %}
