--- a/changelogs/templates/registration/login.html
+++ b/changelogs/templates/registration/login.html
@@ -1,25 +1,27 @@
-{% extends 'changelogs/base.html' %}
+{% extends 'changelogs/_base.html' %}
 
 {% block content %}
-    <form id="login-form" method="post" class="col-lg-4">
-        <h3>Login</h3>
-        {% csrf_token %}
-        <div class="form-group">
-            <input id="id_username" name="username"
-                   type="text" class="form-control" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input id="id_password" name="password"
-                   type="password" class="form-control" placeholder="Password">
-        </div>
-        {% if form.errors %}
-            <div class="alert alert-danger" role="alert">
-                Your username and password didn't match.
-                Please try again.
+    <div class="container">
+        <form id="login-form" method="post" class="col-lg-4">
+            <h3>Login</h3>
+            {% csrf_token %}
+            <div class="form-group">
+                <input id="id_username" name="username"
+                       type="text" class="form-control" placeholder="Username">
             </div>
-        {% endif %}
-        <input type="submit" value="Login"
-               class="btn btn-primary pull-right"/>
-        <input type="hidden" name="next" value="{{ next }}"/>
-    </form>
+            <div class="form-group">
+                <input id="id_password" name="password"
+                       type="password" class="form-control" placeholder="Password">
+            </div>
+            {% if form.errors %}
+                <div class="alert alert-danger" role="alert">
+                    Your username and password didn't match.
+                    Please try again.
+                </div>
+            {% endif %}
+            <input type="submit" value="Login"
+                   class="btn btn-primary pull-right"/>
+            <input type="hidden" name="next" value="{{ next }}"/>
+        </form>
+    </div>
 {% endblock %}
