Fixed style of footer and login page

--- a/changelogs/templates/registration/login.html
+++ b/changelogs/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <form id="login-form" method="post" class="col-lg-4">
-            <h3>Login</h3>
+            <h1 class="display-4">Login</h1>
             {% csrf_token %}
             <div class="form-group">
                 <input id="id_username" name="username"
