Small style improvements

--- a/changelogs/templates/changelogs/api_documentation.html
+++ b/changelogs/templates/changelogs/api_documentation.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="display-4">API Documentation</h1>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="display-3">API Documentation</h1>
+        </div>
         <p>Automate Changelogger via a simple API.</p>
         <h2>Basic usage</h2>
         <p>
