--- a/changelogs/templates/changelogs/version_detail.html
+++ b/changelogs/templates/changelogs/version_detail.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="display-4">{{ version.project.title }}-{{ version.title }}</h1>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="display-4">{{ version.project.title }}-{{ version.title }}</h1>
+        </div>
         {% include "changelogs/_version.html" with version=version %}
     </div>
 {% endblock %}
