--- a/changelogs/templates/changelogs/about.html
+++ b/changelogs/templates/changelogs/about.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="display-4">About</h1>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="display-3">About</h1>
+        </div>
         <p>
             Changelogger is a service to store all your changelogs in one place and to subscribe to changes of your
             favorite
