--- a/changelogs/templates/changelogs/add_version.html
+++ b/changelogs/templates/changelogs/add_version.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="display-2">Add version to {{ project.title }}</h1>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="display-3">Add version to {{ project.title }}</h1>
+        </div>
 
         <form action="{% url 'changelogs:add_version' project.id %}" method="post">
             {% csrf_token %}
