--- a/changelogs/templates/changelogs/profile.html
+++ b/changelogs/templates/changelogs/profile.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="display-4">Profile</h1>
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <h1 class="display-3">Profile</h1>
+        </div>
         <ul>
             <li>username: {{ user.username }}</li>
             <li>e-mail: {{ user.email }}</li>
