--- a/changelogs/templates/registration/login.html
+++ b/changelogs/templates/registration/login.html
@@ -3,7 +3,9 @@
 {% block content %}
     <div class="container">
         <form id="login-form" method="post" class="col-lg-4">
-            <h1 class="display-4">Login</h1>
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+                <h1 class="display-3">Login</h1>
+            </div>
             {% csrf_token %}
             <div class="form-group">
                 <input id="id_username" name="username"
