Added link to contributors in footer

--- a/changelogs/templates/changelogs/_footer.html
+++ b/changelogs/templates/changelogs/_footer.html
@@ -23,6 +23,8 @@
             <h5>Product</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="text-muted" href="{% url 'changelogs:about' %}">About</a></li>
+                <li><a class="text-muted" href="https://github.com/zhelyabuzhsky/changelogger/graphs/contributors"
+                       target="_blank">Contributors</a></li>
             </ul>
         </div>
     </div>
