--- a/changelogs/templates/changelogs/feed.html
+++ b/changelogs/templates/changelogs/feed.html
@@ -14,12 +14,10 @@
                 </div>
             {% endfor %}
         {% else %}
-            <div class="display-3 mt-5 mx-auto" role="alert">
+            <div class="display-3 my-5" role="alert">
                 Empty feed =(
             </div>
-            <p>
-                <a href="{% url 'changelogs:manage_subscriptions' %}">Manage your subscriptions</a>
-            </p>
+            <a href="{% url 'changelogs:manage_subscriptions' %}">Manage your subscriptions</a>
         {% endif %}
     </div>
 {% endblock %}
