--- a/changelogs/templates/changelogs/_navbar.html
+++ b/changelogs/templates/changelogs/_navbar.html
@@ -24,6 +24,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="{% url 'changelogs:profile' %}">Profile</a>
+                            {% if user.is_staff %}
+                                <a class="dropdown-item" href="{% url 'admin:index' %}">Site administration</a>
+                            {% endif %}
                             <a class="dropdown-item" href="{% url 'changelogs:manage_subscriptions' %}">Manage
                                 subscriptions</a>
                             <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
