--- a/changelogs/templates/changelogs/add_version.html
+++ b/changelogs/templates/changelogs/add_version.html
@@ -9,14 +9,16 @@
         <form action="{% url 'changelogs:add_version' project.id %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="title">Title</label>
-                <input name="title" class="form-control" id="title">
+                <label for="{{ form.title.id_for_label }}">Title</label>
+                {{ form.title }}
+                {{ form.title.errors }}
             </div>
             <div class="form-group">
-                <label for="body">Body</label>
-                <textarea class="form-control" name="body" id="body" rows="10" aria-describedby="bodyHelp"></textarea>
+                <label for="{{ form.body.id_for_label }}">Body</label>
+                {{ form.body }}
                 <small id="bodyHelp" class="form-text text-muted">Use <a
                         href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a></small>
+                {{ form.body.errors }}
             </div>
             <input type="submit" class="btn btn-primary" value="Submit">
         </form>
