--- a/changelogs/templates/changelogs/profile.html
+++ b/changelogs/templates/changelogs/profile.html
@@ -12,6 +12,7 @@
             {% if user.email %}
                 <li>e-mail: {{ user.email }}</li>
             {% endif %}
+            <li>API token: {{ user.auth_token }}</li>
         </ul>
     </div>
 {% endblock %}
