--- a/changelogs/templates/changelogs/edit_profile.html
+++ b/changelogs/templates/changelogs/edit_profile.html
@@ -29,6 +29,13 @@
                 {{ form.email.errors }}
             </div>
             <div class="form-group row">
+                <label for="{{ form.github_token.id_for_label }}" class="col-sm-2 col-form-label">GitHub token</label>
+                <div class="col-sm-10">
+                    {{ form.github_token }}
+                </div>
+                {{ form.github_token.errors }}
+            </div>
+            <div class="form-group row">
                 <label for="{{ form.gitlab_token.id_for_label }}" class="col-sm-2 col-form-label">GitLab token</label>
                 <div class="col-sm-10">
                     {{ form.gitlab_token }}
